# KittenTTS_rust_server

./: Cargo.toml  Dockerfile  KittenTTS_server.code-workspace  README.md  compose.yaml  docker-entrypoint.sh  memory.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: settings.example.json
config/systemd/: kittentts-server-rs.service
docs/: CODE_REVIEW_TODO1.md  RUST_PORT.md  RUST_PORT_TODO.md
src/: app_state.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/backend/: kitten.rs  mod.rs
src/middleware/: auth.rs  mod.rs  request_context.rs
src/models/: api.rs  internal.rs
src/routes/: health.rs  mod.rs  tts.rs  voices.rs
src/services/: audio.rs  mod.rs  synth.rs  voices.rs
tests/: config.rs  health.rs
